# venation

./: .gitignore  CMakeLists.txt  IDENTIFICATION.txt  README.txt  demo  install_utils.sh  output.pnm  presentation.url  test.sh
app/: app.cpp  main.cpp
include/: app.hpp  img.hpp  util.hpp
include/growth/: node.hpp  venation.hpp
lib/: node.cpp  venation.cpp
lib/growth/: node.cpp  venation.cpp
masks/: circle_mask.pnm  diamond_mask.pnm  hourglass_mask.pnm  triangle_2_mask.pnm  triangle_mask.pnm  triangle_rotated_mask.pnm
png2pnm/: CmakeLists.txt  main.cpp
pnm2png/: CmakeLists.txt  main.cpp
src/: app.cpp  app.hpp  main.cpp  node.cpp  node.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  venation.cpp  venation.hpp
